<resources>
    <string name="app_name">Name Quiz</string>

    <!--Main Activity-->
    <string name="toQuizBtn">To Quiz</string>
    <string name="toDbBtn">To Database</string>
    <string name="saveOwnerBtn">Save owner</string>
    <string name="welcomeTxt">Welcome</string>
    <string name="insertPlaceholder">Insert app owners name!</string>
    <!-- Main Menu  -->
    <string name="sp_item">View SP</string>


    <!--Add Activity-->
    <string name="namePlaceHolder">Name</string>
    <string name="imagePlaceholder">Image</string>
    <string name="addButton_txt">Add</string>

    <!--Quiz Activity-->
    <string name="quizHeading">Quiz</string>
    <string name="guessTextPlaceholder">Name</string>
    <string name="guessButtonText">Make guess</string>
    <string name="scoreText">Score:</string>
    <string name="scoreNumber">0</string>

    <!-- List item  -->
    <string name="removeBtn">Remove button</string>
    <string name="dbImage">Classmate Image</string>
    <string name="dbName">Classmate Name</string>
</resources>
